--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-hook-form": "^7.51.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
